<resources>
    <string name="app_name">Local History</string>
    <string name="title_activity_maps">Locations Map</string>
    <string name="location_permission_declined">Location permission denied</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_never">Enable location in app settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="search_hint">Search location</string>
    <string name="location_not_found">Location not found</string>
    <string name="error">An error occurred</string>
    <string name="title_activity_location_search_results">Location results</string>
    <string name="no_results">No results</string>
    <string name="location_add_failed">Error retrieving location info</string>
    <string name="title_activity_location_insert">New location</string>
    <string name="location_txt">location</string>
    <string name="location_name">Name</string>
    <string name="location_place">Place</string>
    <string name="location_description">Description</string>
    <string name="location_description_hint">Description, \nHistory, \nTrivia, &#8230;</string>
    <string name="location_place_hint">City, country</string>
    <string name="location_upsert_done">Done</string>
    <string name="location_upsert_incomplete">Not all fields filled in</string>
    <string name="title_activity_location_edit">Edit location</string>
    <string name="title_activity_location_info">Location info</string>
    <string name="menu_edit_text">Edit</string>
    <string name="menu_delete_text">Delete</string>
    <string name="location_delete_dialog_title">Delete location</string>
    <string name="location_delete_dialog_msg">Are you sure you want to delete this location?</string>
    <string name="location_type">Type</string>
    <string name="location_type_description">location type image</string>
    <string name="location_distance">Distance</string>
    <string name="location_distance_unknown">Unknown</string>
</resources>