<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocationUpsertActivity">

    <TextView
        android:id="@+id/location_upsert_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/location_name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/location_upsert_name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/location_name"
        android:importantForAutofill="no"
        android:inputType="text|textCapSentences"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/location_upsert_type_spinner"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_type_spinner"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_name_text_view" />

    <TextView
        android:id="@+id/location_upsert_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location_type"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_name_edit_text" />

    <Spinner
        android:id="@+id/location_upsert_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_type_text_view" />

    <TextView
        android:id="@+id/location_upsert_place_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location_place"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_type_spinner" />

    <EditText
        android:id="@+id/location_upsert_place_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/location_place_hint"
        android:importantForAutofill="no"
        android:ems="10"
        android:enabled="false"
        android:inputType="text|textCapSentences"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/location_upsert_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_place_text_view" />

    <TextView
        android:id="@+id/location_upsert_description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location_description"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_place_edit_text" />

    <EditText
        android:id="@+id/location_upsert_description_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/location_description_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textCapSentences"
        android:textSize="16sp"
        android:minLines="3"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="@+id/location_upsert_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_description_text_view" />

    <Button
        android:id="@+id/location_upsert_done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location_upsert_done"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/location_upsert_name_edit_text"
        app:layout_constraintStart_toStartOf="@+id/location_upsert_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/location_upsert_description_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>