<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_info_swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.LocationInfoActivity">

        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/location_info_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/location_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location_info_name_val_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:alpha="50"
                android:text="@string/location_name"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/location_info_type_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_info_name_text_view" />

            <TextView
                android:id="@+id/location_info_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location_type"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/location_info_name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/location_info_name_val_text_view" />

            <TextView
                android:id="@+id/location_info_type_val_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location_type"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/location_info_name_val_text_view"
                app:layout_constraintStart_toStartOf="@+id/location_info_name_val_text_view"
                app:layout_constraintTop_toBottomOf="@+id/location_info_type_text_view" />

            <TextView
                android:id="@+id/location_info_place_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location_place"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/location_info_name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/location_info_type_val_text_view" />

            <TextView
                android:id="@+id/location_info_place_val_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/location_place_hint"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/location_info_name_val_text_view"
                app:layout_constraintTop_toBottomOf="@+id/location_info_place_text_view" />

            <TextView
                android:id="@+id/location_info_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/location_description"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/location_info_name_text_view"
                app:layout_constraintTop_toBottomOf="@+id/location_info_place_val_text_view" />

            <TextView
                android:id="@+id/location_info_description_val_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/location_description_hint"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/location_info_place_val_text_view"
                app:layout_constraintStart_toStartOf="@+id/location_info_name_val_text_view"
                app:layout_constraintTop_toBottomOf="@+id/location_info_description_text_view" />

            <ImageView
                android:id="@+id/location_info_type_image_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>